--- a/English/grammar.html
+++ b/English/grammar.html
@@ -265,7 +265,41 @@
 <h2 id="Past-Simple">Past Simple</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
     <img src="PaSi1.png" alt="Зображення">
-    
+    <p>Слова, по яким можна впізнати Past Simple:</p>
+     <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>yesterday</td>
+      <td>вчора</td>
+    </tr>
+     <tr>
+      <td>the day before yesterday</td>
+      <td>позавчора</td>
+    </tr>
+     <tr>
+      <td>just now</td>
+      <td>тільки-но</td>
+    </tr>
+     <tr>
+      <td>the other day</td>
+      <td>на днях</td>
+    </tr>
+     <tr>
+      <td>last week</td>
+      <td>минулого тижня</td>
+    </tr>
+     <tr>
+      <td>last month</td>
+      <td>минулого місяця</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -273,6 +307,37 @@
 <h2 id="Past-Continuous">Past Continuous</h2>
 <p>Past Continuous використовують для виразу дії, яка вже відбулася в певний момент часу у минулому.</p>
        <img src="PaCo.png" alt="Зображення">
+       <p>Слова, по яким можна впізнати Past Continuous:</p>
+        <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>at that moment</td>
+      <td>в той момент</td>
+    </tr>
+     <tr>
+      <td>at the same time</td>
+      <td>в цей же час</td>
+    </tr>
+     <tr>
+      <td>while</td>
+      <td>в той час, як</td>
+    </tr>
+     <tr>
+      <td>when</td>
+      <td><коли/td>
+    </tr>
+     <tr>
+      <td>as</td>
+      <td>так як</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -280,6 +345,37 @@
 <h2 id="Past-Perfect">Past Perfect</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
        <img src="PaPe.png" alt="Зображення">
+       <p>Слова, по яким можна впізнати Past Perfect:</p>
+        <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>before the year</td>
+      <td>до (певного) року</td>
+    </tr>
+     <tr>
+      <td>never before</td>
+      <td>ніколи раніше</td>
+    </tr>
+     <tr>
+      <td>after</td>
+      <td>після того, як</td>
+    </tr>
+     <tr>
+      <td>by two o’clock</td>
+      <td>до 2-ї години</td>
+    </tr>
+     <tr>
+      <td>by half past six</td>
+      <td>до половини 7-ї</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -287,6 +383,37 @@
 <h2 id="Past-Perfect-Continuous">Past Perfect Continuous</h2>
 <p>Past Perfect використовують для виразу дії, яка закінчилася раніше другої дії або певного моменту у минулому.</p>
        <img src="PaPeCo.png" alt="Зображення">
+       <p>Слова, по яким можна впізнати Past Perfect Continuous:</p>
+        <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>since last week</td>
+      <td>з минулого тижня</td>
+    </tr>
+     <tr>
+      <td>since last month</td>
+      <td>з минулого місяця</td>
+    </tr>
+     <tr>
+      <td>before, till, untill</td>
+      <td>до</td>
+    </tr>
+     <tr>
+      <td>for an hour</td>
+      <td>протягом години</td>
+    </tr>
+     <tr>
+      <td>for a day</td>
+      <td>протягом дня</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
@@ -294,6 +421,41 @@
 <h2 id="Future-Simple">Future Simple</h2>
 <p>Future Simple використовують для виразу дії, яка відбудеться у майбутньому.</p>
        <img src="FuSi.png" alt="Зображення">
+       <p>Слова, по яким можна впізнати Future Simple:</p>
+        <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>tomorrow</td>
+      <td>завтра</td>
+    </tr>
+     <tr>
+      <td>the day after tomorrow</td>
+      <td>післязавтра</td>
+    </tr>
+     <tr>
+      <td>tonight</td>
+      <td>сьогодні ввечері</td>
+    </tr>
+     <tr>
+      <td>soon</td>
+      <td>скоро</td>
+    </tr>
+     <tr>
+      <td>as soon as</td>
+      <td>як тільки</td>
+    </tr>
+     <tr>
+      <td>later</td>
+      <td>пізніше</td>
+    </tr>
+  </tbody>
+</table>
   </article>
 <a href="#to-the-content">До змісту</a>
 
