--- a/English/words.html
+++ b/English/words.html
@@ -49,6 +49,73 @@
     </tr>
   </tbody>
 </table>
+
+       <table border="1">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>bread</td>
+      <td>хліб</td>
+    </tr>
+       <tr>
+      <td>rice</td>
+      <td>рис</td>
+    </tr>
+       <tr>
+      <td>pasta</td>
+      <td>паста</td>
+    </tr>
+       <tr>
+      <td>salt</td>
+      <td>сіль</td>
+    </tr>
+       <tr>
+      <td>chips</td>
+      <td>чіпси</td>
+    </tr>
+       <tr>
+      <td>pepper</td>
+      <td>перець</td>
+    </tr>
+       <tr>
+      <td>meat</td>
+      <td>м'ясо</td>
+    </tr>
+       <tr>
+      <td>fish</td>
+      <td>риба</td>
+    </tr>
+       <tr>
+      <td>vegetarian</td>
+      <td>овочі</td>
+    </tr>
+       <tr>
+      <td>sugar</td>
+      <td>цукор</td>
+    </tr>
+       <tr>
+      <td>tea</td>
+      <td>чай</td>
+    </tr>
+       <tr>
+      <td>coffee</td>
+      <td>кава</td>
+    </tr>
+       <tr>
+      <td></td>
+      <td></td>
+    </tr>
+       <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
     
  <table border="1">
   <thead>
