--- a/English/words.html
+++ b/English/words.html
@@ -50,7 +50,7 @@
   </tbody>
 </table>
 
-       <table border="1">
+       <table border="2">
 <thead>
     <tr>
       <th>Слово</th>
@@ -107,11 +107,87 @@
       <td>кава</td>
     </tr>
        <tr>
-      <td></td>
+      <td>fruit</td>
       <td></td>
     </tr>
        <tr>
+      <td>carrots</td>
       <td></td>
+    </tr>
+       <tr>
+      <td>beans</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>potatoes</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>tomatoes</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>peas</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>onions</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>garlic</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>mushrooms</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>orange</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>apple</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>banana</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>pear</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>grapes</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>strawberries</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>pineapple</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>milk</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>juice</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>beer</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>wine</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>mineral water</td>
       <td></td>
     </tr>
   </tbody>
