--- a/English/words.html
+++ b/English/words.html
@@ -10,7 +10,8 @@
   <body>
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
-
+ 
+      <h3>Питання</h3>
 <table border="1">
 <thead>
     <tr>
@@ -50,6 +51,7 @@
   </tbody>
 </table>
 
+      <h3>Їжа та напої</h3>
        <table border="2">
 <thead>
     <tr>
