--- a/English/words.html
+++ b/English/words.html
@@ -52,6 +52,8 @@
 </table>
 
       <h3>Їжа та напої</h3>
+
+      <h3>Everyday food</h3>
        <table border="3">
 <thead>
     <tr>
@@ -108,6 +110,18 @@
       <td>coffee</td>
       <td>кава</td>
     </tr>
+      </tbody>
+</table>
+
+      <h3>Vegetables</h3>
+       <table border="3">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
        <tr>
       <td>fruit</td>
       <td></td>
@@ -144,6 +158,18 @@
       <td>mushrooms</td>
       <td></td>
     </tr>
+      </tbody>
+</table>
+
+      <h3>Fruit</h3>
+       <table border="3">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
        <tr>
       <td>orange</td>
       <td></td>
@@ -172,6 +198,18 @@
       <td>pineapple</td>
       <td></td>
     </tr>
+      </tbody>
+</table>
+
+      <h3>Drinks</h3>
+       <table border="3">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
        <tr>
       <td>milk</td>
       <td></td>
