--- a/English/words.html
+++ b/English/words.html
@@ -95,10 +95,6 @@
       <td>риба</td>
     </tr>
        <tr>
-      <td>vegetarian</td>
-      <td>овочі</td>
-    </tr>
-       <tr>
       <td>sugar</td>
       <td>цукор</td>
     </tr>
@@ -123,40 +119,36 @@
   </thead>
   <tbody>
        <tr>
-      <td>fruit</td>
-      <td></td>
-    </tr>
-       <tr>
       <td>carrots</td>
-      <td></td>
+      <td>морква</td>
     </tr>
        <tr>
       <td>beans</td>
-      <td></td>
+      <td>боби</td>
     </tr>
        <tr>
       <td>potatoes</td>
-      <td></td>
+      <td>картопля</td>
     </tr>
        <tr>
       <td>tomatoes</td>
-      <td></td>
+      <td>помідори</td>
     </tr>
        <tr>
       <td>peas</td>
-      <td></td>
+      <td>горох</td>
     </tr>
        <tr>
       <td>onions</td>
-      <td></td>
+      <td>цибуля</td>
     </tr>
        <tr>
       <td>garlic</td>
-      <td></td>
+      <td>часник</td>
     </tr>
        <tr>
       <td>mushrooms</td>
-      <td></td>
+      <td>гриби</td>
     </tr>
       </tbody>
 </table>
@@ -172,31 +164,31 @@
   <tbody>
        <tr>
       <td>orange</td>
-      <td></td>
+      <td>апельсин</td>
     </tr>
        <tr>
       <td>apple</td>
-      <td></td>
+      <td>яблука</td>
     </tr>
        <tr>
       <td>banana</td>
-      <td></td>
+      <td>банан</td>
     </tr>
        <tr>
       <td>pear</td>
-      <td></td>
+      <td>груша</td>
     </tr>
        <tr>
       <td>grapes</td>
-      <td></td>
+      <td>виноград</td>
     </tr>
        <tr>
       <td>strawberries</td>
-      <td></td>
+      <td>полуниця</td>
     </tr>
        <tr>
       <td>pineapple</td>
-      <td></td>
+      <td>ананас</td>
     </tr>
       </tbody>
 </table>
@@ -212,23 +204,23 @@
   <tbody>
        <tr>
       <td>milk</td>
-      <td></td>
+      <td>молоко</td>
     </tr>
        <tr>
       <td>juice</td>
-      <td></td>
+      <td>сік</td>
     </tr>
        <tr>
       <td>beer</td>
-      <td></td>
+      <td>пиво</td>
     </tr>
        <tr>
       <td>wine</td>
-      <td></td>
+      <td>вино</td>
     </tr>
        <tr>
       <td>mineral water</td>
-      <td></td>
+      <td>мінеральна вода</td>
     </tr>
   </tbody>
 </table>
