--- a/English/words.html
+++ b/English/words.html
@@ -68,7 +68,7 @@
     </tr>
        <tr>
       <td>rice</td>
-      <td><input type="text" id="myInput"></td>
+      <td>рис</td>
     </tr>
        <tr>
       <td>pasta</td>
