--- a/English/index.html
+++ b/English/index.html
@@ -22,6 +22,10 @@
         <li>
             <a href="words.html">Words</a>
         </li>
+       
+        <li>
+            <a href="exercises.html">Exercises</a>
+        </li>
 
         <li>
             <a href="test.html">Test</a>
@@ -35,6 +39,7 @@
   <p>Grammar - допоможе вивчити теми з граматики (Past, Present, Future).</p>
   <p>Reading - практикує читання.</p>
   <p>Words - тут можна вивчити і записати нові слова.</p>
+  <p>Exercises - вправи для кращого запам'ятовування</p>
   <p>Test - після тем з граматики Ви будете проходити тест, щоб засвоїти матеріал.</p>
   <p>Answer - тут можна подивитись відповіді на тестові завдання</p>
 </body>
