--- a/English/words.html
+++ b/English/words.html
@@ -225,8 +225,10 @@
   </tbody>
 </table>
 
-<h3>In the kitchen</h3>
-
+<h2>In the kitchen</h2>
+      
+<h3>What's in the kitchen</h3>
+      
        <table border="3">
 <thead>
     <tr>
@@ -375,6 +377,122 @@
     </tr>
        <tr>
       <td>glass</td>
+      <td></td>
+    </tr>
+      </tbody>
+</table>
+
+<h2>In the bedroom and bathroom</h2>
+
+<h3>Bedroom</h3>
+
+<table border="3">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>bed</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>bedside lamp</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>alarm clock</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>pyjamas</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>dressing table</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>chest of drawers</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>mirror</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>wardrobe</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>bedside table</td>
+      <td></td>
+    </tr>
+      <tr>
+      <td>comb</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>hairbrush</td>
+      <td></td>
+    </tr>
+</tbody>
+</table>
+
+           <h3>Bathroom</h3>
+
+            <table border="3">
+<thead>
+    <tr>
+      <th>Слово</th>
+      <th>Переклад</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>shower</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>soap</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>shampoo</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>toothpaste</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>shower gel</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>razor</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>toothbrush</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>toilet</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>shelf</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>basin</td>
+      <td></td>
+    </tr>
+       <tr>
+      <td>towel</td>
       <td></td>
     </tr>
       </tbody>
