--- a/English/words.html
+++ b/English/words.html
@@ -51,6 +51,43 @@
   </tbody>
 </table>
 
+      <div class="container">
+    <div class="block col-lg-4 col-md-6 ">
+        <div class="main">
+            <div class="caption caption-1">
+                Розповсюдження
+            </div>
+
+            <p>
+                Лисиці розповсюджені в багатьох частинах світу, включаючи Північну Америку, Європу, Азію та Африку.
+            </p>
+        </div>
+    </div>
+
+    <div class="block col-lg-4 col-md-6 ">
+        <div class="main">
+            <div class="caption caption-2">
+                Зовнішнність
+            </div>
+
+            <p>
+                Лисиці мають довгий хвіст та густе хутро, яке часто буває червоного або сірого кольору. У них гострі вуха та великі очі.
+            </p>
+        </div>
+    </div>
+
+    <div class="block col-lg-4 col-sm-12">
+        <div class="main">
+            <div class="caption caption-3">
+                Харчування
+            </div>
+
+            <p>
+                Лисиці є всеїдними і живляться різноманітною їжею, такою як гризуни, птахи, яйця, комахи, фрукти та навіть сміття.
+            </p>
+        </div>
+    </div>
+</div>
       <h2>Їжа та напої</h2>
 
       <h3>Everyday food</h3>
