--- a/English/words.html
+++ b/English/words.html
@@ -10,7 +10,76 @@
   <body>
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
- 
+
+      <div class="container">
+  <table>
+    <thead>
+      <tr>
+        <th>Слово</th>
+        <th>Переклад</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>bread</td>
+        <td>хліб</td>
+      </tr>
+      <tr>
+        <td>rice</td>
+        <td>рис</td>
+      </tr>
+      <tr>
+        <td>pasta</td>
+        <td>паста</td>
+      </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+      <tr>
+        <th>Слово</th>
+        <th>Переклад</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>carrots</td>
+        <td>морква</td>
+      </tr>
+      <tr>
+        <td>beans</td>
+        <td>боби</td>
+      </tr>
+      <tr>
+        <td>potatoes</td>
+        <td>картопля</td>
+      </tr>
+    </tbody>
+  </table>
+  <table>
+    <thead>
+      <tr>
+        <th>Слово</th>
+        <th>Переклад</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>orange</td>
+        <td>апельсин</td>
+      </tr>
+      <tr>
+        <td>apple</td>
+        <td>яблука</td>
+      </tr>
+      <tr>
+        <td>banana</td>
+        <td>банан</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
       <h2>Питання</h2>
 <table border="3">
 <thead>
