--- a/English/words.html
+++ b/English/words.html
@@ -11,6 +11,19 @@
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
+<div class="container">
+  <div class="block">
+    <h2>Стовпець 1</h2>
+  </div>
+  <div class="block">
+    <h2>Стовпець 2</h2>
+  </div>
+  <div class="block">
+    <h2>Стовпець 3</h2>
+  </div>
+</div>
+
+      
       <div class="container">
   <table>
     <thead>
