--- a/English/words.html
+++ b/English/words.html
@@ -11,7 +11,7 @@
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
-      <h2>Питання</h2>
+      <h2>Question</h2>
 <table border="3">
 <thead>
     <tr>
