--- a/English/words.html
+++ b/English/words.html
@@ -11,6 +11,12 @@
     <h1 id="bio">Words</h1>
     <p><a id="back" href="index.html">Назад на головну</a></p>
 
+       <ul>
+        <li>
+            <a href="irregular.html">Irregular verbs</a>
+        </li>
+       </ul>
+
       <h2>Question</h2>
 <table border="3">
 <thead>
