--- a/English/irregular.html
+++ b/English/irregular.html
@@ -612,8 +612,8 @@
     </tr>
 <tr>
       <td>beat</td>
-      <td>]beat</td>
-      <td><beaten/td>
+      <td>beat</td>
+      <td>beaten</td>
     </tr>
 </tbody>
 </table>
