--- a/English/irregular.html
+++ b/English/irregular.html
@@ -615,5 +615,149 @@
       <td>beat</td>
       <td>beaten</td>
     </tr>
+    <tr>
+      <td>swear</td>
+      <td>swore</td>
+      <td>sworn</td>
+    </tr>
+    <tr>
+      <td>tear</td>
+      <td>tore</td>
+      <td>torn</td>
+    </tr>
+    <tr>
+      <td>wear</td>
+      <td>wore</td>
+      <td>worn</td>
+    </tr>
+    <tr>
+      <td>weave</td>
+      <td>wove</td>
+      <td>woven</td>
+    </tr>
+    <tr>
+      <td>forbid</td>
+      <td>forbade</td>
+      <td>forbidden</td>
+    </tr>
+    <tr>
+      <td>give</td>
+      <td>gave</td>
+      <td>given</td>
+    </tr>
+    <tr>
+      <td>forgive</td>
+      <td>forgave</td>
+      <td>forgiven</td>
+    </tr>
+    <tr>
+      <td>drive</td>
+      <td>drove</td>
+      <td>driven</td>
+    </tr>
+    <tr>
+      <td>eat</td>
+      <td>ate</td>
+      <td>eaten</td>
+    </tr>
+    <tr>
+      <td>get</td>
+      <td>got</td>
+      <td>got (gotten)</td>
+    </tr>
+    <tr>
+      <td>prove</td>
+      <td>proved</td>
+      <td>proven (proved)</td>
+    </tr>
+    <tr>
+      <td>show</td>
+      <td>showed</td>
+      <td>shown</td>
+    </tr>
+    <tr>
+      <td>wake</td>
+      <td>woke (waked)</td>
+      <td>woken (waked)</td>
+    </tr>
+</tbody>
+</table>
+
+<h2>Group 9</h2>
+    
+    <table border="3">
+<thead>
+    <tr>
+      <th>Simple form</th>
+      <th>Simple past</th>
+      <th>Past participle</th>
+    </tr>
+  </thead>
+  <tbody>
+ <tr>
+      <td>dive</td>
+      <td>dived (dove)</td>
+      <td>dived</td>
+    </tr>
+    <tr>
+      <td>do</td>
+      <td>did</td>
+      <td>done</td>
+    </tr>
+    <tr>
+      <td>go</td>
+      <td>went</td>
+      <td>gone</td>
+    </tr>
+    <tr>
+      <td>hear</td>
+      <td>heard</td>
+      <td>heard</td>
+    </tr>
+    <tr>
+      <td>have</td>
+      <td>had</td>
+      <td>had</td>
+    </tr>
+    <tr>
+      <td>(be) am, is, are</td>
+      <td>was, were</td>
+      <td>been</td>
+    </tr>
+    <tr>
+      <td>come</td>
+      <td>came</td>
+      <td>come</td>
+    </tr>
+    <tr>
+      <td>become</td>
+      <td>became</td>
+      <td>become</td>
+    </tr>
+    <tr>
+      <td>overcome</td>
+      <td>overcame</td>
+      <td>overcome</td>
+    </tr>
+    <tr>
+      <td>see</td>
+      <td>saw</td>
+      <td>seen</td>
+    </tr>
+    <tr>
+      <td>saw</td>
+      <td>sawed</td>
+      <td>sawn (sawed)</td>
+    </tr>
+    <tr>
+      <td>lie</td>
+      <td>lied</td>
+      <td>lied</td>
+    </tr>
+    <tr>
+      <td>lay</td>
+      <td>laid</td>
+      <td>laid</td>
+    </tr>
 </tbody>
 </table>
