--- a/English/grammar.html
+++ b/English/grammar.html
@@ -88,7 +88,7 @@
   <article>
 <h2 id="Present-Simple">Present Simple</h2>
 <p>Present Simple використовують для виразу звичайної, регулярно повторюваної дії.</p>
-<img src="PrSi1.png" alt="Зображення">
+<img src="imageGrammar/PrSi1.png" alt="Зображення">
     <p>Слова, по яким можна впізнати Present Simple:</p>
     <table border="1">
 <thead>
