--- a/English/grammar.html
+++ b/English/grammar.html
@@ -138,7 +138,7 @@
   <article>
 <h2 id="Present-Continuous">Present Continuous</h2>
 <p>Present Continuous використовують для виразу дії, яка відбувається на даний момент.</p>
-    <img src="PrCo.png" alt="Зображення">
+    <img src="imageGrammar/PrCo.png" alt="Зображення">
     <p>Слова, по яким можна впізнати Present Continuous:</p>
     <table border="1">
 <thead>
@@ -184,7 +184,7 @@
   <article>
 <h2 id="Present-Perfect">Present Perfect</h2>
 <p>Present Perfect використовують для виразу дії, яка відбулася (або яка відбувається), результат якої зв’язаний з теперішнім.</p>
-    <img src="PrPe.png" alt="Зображення">
+    <img src="imageGrammar/PrPe.png" alt="Зображення">
     <p>Слова, по яким можна впізнати Present Perfect:</p>
     <table border="1">
 <thead>
@@ -222,7 +222,7 @@
   <article>
 <h2 id="Present-Perfect-Continuous">Present Perfect Continuous</h2>
 <p>Present Perfect Continuous використовують для виразу дії, яка розпочалася в минулому і продовжується у теперішньому часі, або ж важлива тривалість дії.</p>
-    <img src="PrPeCo.png" alt="Зображення">
+    <img src="imageGrammar/PrPeCo.png" alt="Зображення">
     <p>Слова, по яким можна впізнати Present Perfect Continuous:</p>
     <table border="1">
 <thead>
@@ -264,7 +264,7 @@
   <article>
 <h2 id="Past-Simple">Past Simple</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
-    <img src="PaSi1.png" alt="Зображення">
+    <img src="imageGrammar/PaSi1.png" alt="Зображення">
     <p>Слова, по яким можна впізнати Past Simple:</p>
      <table border="1">
 <thead>
@@ -306,7 +306,7 @@
      <article>
 <h2 id="Past-Continuous">Past Continuous</h2>
 <p>Past Continuous використовують для виразу дії, яка вже відбулася в певний момент часу у минулому.</p>
-       <img src="PaCo.png" alt="Зображення">
+       <img src="imageGrammar/PaCo.png" alt="Зображення">
        <p>Слова, по яким можна впізнати Past Continuous:</p>
         <table border="1">
 <thead>
@@ -344,7 +344,7 @@
      <article>
 <h2 id="Past-Perfect">Past Perfect</h2>
 <p>Past Simple використовують для виразу дії, яка відбулася у минулому.</p>
-       <img src="PaPe.png" alt="Зображення">
+       <img src="imageGrammar/PaPe.png" alt="Зображення">
        <p>Слова, по яким можна впізнати Past Perfect:</p>
         <table border="1">
 <thead>
@@ -382,7 +382,7 @@
      <article>
 <h2 id="Past-Perfect-Continuous">Past Perfect Continuous</h2>
 <p>Past Perfect використовують для виразу дії, яка закінчилася раніше другої дії або певного моменту у минулому.</p>
-       <img src="PaPeCo.png" alt="Зображення">
+       <img src="imageGrammar/PaPeCo.png" alt="Зображення">
        <p>Слова, по яким можна впізнати Past Perfect Continuous:</p>
         <table border="1">
 <thead>
@@ -420,7 +420,7 @@
      <article>
 <h2 id="Future-Simple">Future Simple</h2>
 <p>Future Simple використовують для виразу дії, яка відбудеться у майбутньому.</p>
-       <img src="FuSi.png" alt="Зображення">
+       <img src="imageGrammar/FuSi.png" alt="Зображення">
        <p>Слова, по яким можна впізнати Future Simple:</p>
         <table border="1">
 <thead>
@@ -462,21 +462,21 @@
      <article>
 <h2 id="Future-Continuous">Future Continuous</h2>
 <p>Future Continuous використовують для виразу дії, яка буде відбуватися у певний момент часу в майбутньому.</p>
-       <img src="FuCo.png" alt="Зображення">
+       <img src="imageGrammar/FuCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Perfect">Future Perfect</h2>
 <p>Future Perfect використовують для виразу дії, яка завершиться до певного моменту часу в майбутньому.</p>
-       <img src="FuPe.png" alt="Зображення">
+       <img src="imageGrammar/FuPe.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
 
      <article>
 <h2 id="Future-Perfect-Continuous">Future Perfect Continuous</h2>
 <p>Future Perfect Continuous використовують для виразу дії, яка розпочавшись у певний момент, все ще буде продовжуватися в якийсь момент часу у майбутньому.</p>
-       <img src="FuPeCo.png" alt="Зображення">
+       <img src="imageGrammar/FuPeCo.png" alt="Зображення">
   </article>
 <a href="#to-the-content">До змісту</a>
     
