--- a/English/words.html
+++ b/English/words.html
@@ -13,8 +13,12 @@
 
        <ul>
         <li>
-            <a href="irregular.html">Irregular verbs</a>
+            <a href="words/irregular.html">Irregular verbs</a>
         </li>
+           
+           <li>
+               <a href="words/Food.html">Food and drinks</a>
+           </li>
        </ul>
 
       <h2>Question</h2>
