--- a/English/words.html
+++ b/English/words.html
@@ -17,7 +17,7 @@
         </li>
            
            <li>
-               <a href="words/Food.html">Food and drinks</a>
+               <a href="words/food.html">Food and drinks</a>
            </li>
        </ul>
 
