--- a/English/words/irregular.html
+++ b/English/words/irregular.html
@@ -9,7 +9,7 @@
     <h1 id="bio">Irregular verbs</h1>
 
 <nav>
-<p><a href="words.html">Назад на Words</a></p>
+<p><a href="words/words.html">Назад на Words</a></p>
 </nav>
 
 <h2>Group 1</h2>
