--- a/English/irregular.html
+++ b/English/irregular.html
@@ -1,764 +1,32 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-   <meta charset="UTF-8">
-   <title> Pract </title>
-  </head>
-  <body>
-    <h1 id="bio">Irregular verbs</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>Pract</title>
+  <link rel="stylesheet" href="biography.css">
+</head>
+<body>
+  <h1>Irregular verbs</h1>
 
-<nav>
-<p><a href="words.html">Назад на Words</a></p>
-</nav>
+  <nav>
+    <p><a href="words.html">Назад на Words</a></p>
+  </nav>
 
-<h2>Group 1</h2>
+  <h2>Food and drink</h2>
 
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>ring</td>
-      <td>rang</td>
-      <td>rung</td>
-    </tr>
-<tr>
-      <td>sing</td>
-      <td>sang</td>
-      <td>sung</td>
-    </tr>
-<tr>
-      <td>sink</td>
-      <td>sank</td>
-      <td>sunk</td>
-    </tr>
-<tr>
-      <td>drink</td>
-      <td>drank</td>
-      <td>drunk</td>
-    </tr>
-<tr>
-      <td>shrink</td>
-      <td>shrank</td>
-      <td>shrunk</td>
-    </tr>
-<tr>
-      <td>swim</td>
-      <td>swam</td>
-      <td>swum</td>
-    </tr>
-<tr>
-      <td>begin</td>
-      <td>began</td>
-      <td>begun</td>
-    </tr>
-<tr>
-      <td>run</td>
-      <td>ran</td>
-      <td>run</td>
-    </tr>
-</tbody>
-</table>
+  <h3>Everyday food</h3>
 
-<h2>Group 2</h2>
+  <p>Here is a list of everyday food items:</p>
 
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
-<tr>
-      <td>feed</td>
-      <td>fed</td>
-      <td>fed</td>
-    </tr>
-<tr>
-      <td>lead</td>
-      <td>led</td>
-      <td>led</td>
-    </tr>
-<tr>
-      <td>breed</td>
-      <td>bred</td>
-      <td>bred</td>
-    </tr>
-<tr>
-      <td>read</td>
-      <td>read</td>
-      <td>read</td>
-    </tr>
-<tr>
-      <td>sell</td>
-      <td>sold</td>
-      <td>sold</td>
-    </tr>
-<tr>
-      <td>tell</td>
-      <td>told</td>
-      <td>told</td>
-    </tr>
-<tr>
-      <td>slide</td>
-      <td>slid</td>
-      <td>slid</td>
-    </tr>
-<tr>
-      <td>hold</td>
-      <td>held</td>
-      <td>held</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 3</h2>
-
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>hit</td>
-      <td>hit</td>
-      <td>hit</td>
-    </tr>
-<tr>
-      <td>fit</td>
-      <td>fit</td>
-      <td>fit</td>
-    </tr>
-<tr>
-      <td>spit</td>
-      <td>spit (spat)</td>
-      <td>spit (spat)</td>
-    </tr>
-<tr>
-      <td>knit</td>
-      <td>knit (knitted)</td>
-      <td>knit (knitted)</td>
-    </tr>
-<tr>
-      <td>quit</td>
-      <td>quit</td>
-      <td>quit</td>
-    </tr>
-<tr>
-      <td>let</td>
-      <td>let</td>
-      <td>let</td>
-    </tr>
-<tr>
-      <td>set</td>
-      <td>set</td>
-      <td>set</td>
-    </tr>
-<tr>
-      <td>upset</td>
-      <td>upset</td>
-      <td>upset</td>
-    </tr>
-<tr>
-      <td>shut</td>
-      <td>shut</td>
-      <td>shut</td>
-    </tr>
-<tr>
-      <td>cut</td>
-      <td>cut</td>
-      <td>cut</td>
-    </tr>
-<tr>
-      <td>put</td>
-      <td>put</td>
-      <td>put</td>
-    </tr>
-<tr>
-      <td>cost</td>
-      <td>cost</td>
-      <td>cost</td>
-    </tr>
-<tr>
-      <td>hurt</td>
-      <td>hurt</td>
-      <td>hurt</td>
-    </tr>
-<tr>
-      <td>spread</td>
-      <td>spread</td>
-      <td>spread</td>
-    </tr>
-<tr>
-      <td>broadcast</td>
-      <td>broadcast</td>
-      <td>broadcast</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 4</h2>
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>buy</td>
-      <td>bought</td>
-      <td>bought</td>
-    </tr>
-<tr>
-      <td>fight</td>
-      <td>fought</td>
-      <td>fought</td>
-    </tr>
-<tr>
-      <td>seek</td>
-      <td>sought</td>
-      <td>sought</td>
-    </tr>
-<tr>
-      <td>think</td>
-      <td>thought</td>
-      <td>thought</td>
-    </tr>
-<tr>
-      <td>bring</td>
-      <td>brought</td>
-      <td>brought</td>
-    </tr>
-<tr>
-      <td>teach</td>
-      <td>taught</td>
-      <td>taught</td>
-    </tr>
-<tr>
-      <td>catch</td>
-      <td>caught</td>
-      <td>caught</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 5</h2>
-
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>bend</td>
-      <td>bent</td>
-      <td>bent</td>
-    </tr>
-<tr>
-      <td>send</td>
-      <td>sent</td>
-      <td>sent</td>
-    </tr>
-<tr>
-      <td>lend</td>
-      <td>lent</td>
-      <td>lent</td>
-    </tr>
-<tr>
-      <td>spend</td>
-      <td>spent</td>
-      <td>spent</td>
-    </tr>
-<tr>
-      <td>build</td>
-      <td>built</td>
-      <td>built</td>
-    </tr>
-<tr>
-      <td>sleep</td>
-      <td>slept</td>
-      <td>slept</td>
-    </tr>
-<tr>
-      <td>keep</td>
-      <td>kept</td>
-      <td>kept</td>
-    </tr>
-<tr>
-      <td>creep</td>
-      <td>crept</td>
-      <td>crept</td>
-    </tr>
-<tr>
-      <td>weep</td>
-      <td>wept</td>
-      <td>wept</td>
-    </tr>
-<tr>
-      <td>sweep</td>
-      <td>swept</td>
-      <td>swept</td>
-    </tr>
-<tr>
-      <td>leap</td>
-      <td>leapt (leaped)</td>
-      <td>leapt (leaped)</td>
-    </tr>
-<tr>
-      <td>feel</td>
-      <td>felt</td>
-      <td>felt</td>
-    </tr>
-<tr>
-      <td>mean</td>
-      <td>meant</td>
-      <td>meant</td>
-    </tr>
-<tr>
-      <td>dream</td>
-      <td>dreamt (dreamed)</td>
-      <td>dreamt (dreamed)</td>
-    </tr>
-<tr>
-      <td>meet</td>
-      <td>met</td>
-      <td>met</td>
-    </tr>
-<tr>
-      <td>leave</td>
-      <td>left</td>
-      <td>left</td>
-    </tr>
-<tr>
-      <td>lose</td>
-      <td>lost</td>
-      <td>lost</td>
-    </tr>
-<tr>
-      <td>burn</td>
-      <td>burnt (burned)</td>
-      <td>burnt (burned)</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 6</h2>
-
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>hang</td>
-      <td>hung</td>
-      <td>hung</td>
-    </tr>
-<tr>
-      <td>hang (to kill)</td>
-      <td>hanged</td>
-      <td>hanged</td>
-    </tr>
-<tr>
-      <td>dig</td>
-      <td>dug</td>
-      <td>dug</td>
-    </tr>
-<tr>
-      <td>shoot</td>
-      <td>shot</td>
-      <td>shot</td>
-    </tr>
-<tr>
-      <td>stand</td>
-      <td>stood</td>
-      <td>stood</td>
-    </tr>
-<tr>
-      <td>understand</td>
-      <td>understood</td>
-      <td>understood</td>
-    </tr>
-<tr>
-      <td>stick</td>
-      <td>stuck</td>
-      <td>stuck</td>
-    </tr>
-<tr>
-      <td>strike</td>
-      <td>struck</td>
-      <td>struck</td>
-    </tr>
-<tr>
-      <td>sit</td>
-      <td>sat</td>
-      <td>sat</td>
-    </tr>
-<tr>
-      <td>win</td>
-      <td>won</td>
-      <td>won</td>
-    </tr>
-<tr>
-      <td>make</td>
-      <td>made</td>
-      <td>made</td>
-    </tr>
-<tr>
-      <td>pay</td>
-      <td>paid</td>
-      <td>paid</td>
-    </tr>
-<tr>
-      <td>lay</td>
-      <td>laid</td>
-      <td>laid</td>
-    </tr>
-<tr>
-      <td>say</td>
-      <td>said</td>
-      <td>said</td>
-    </tr>
-<tr>
-      <td>light</td>
-      <td>lit (lighted)</td>
-      <td>lit (lighted)</td>
-    </tr>
-<tr>
-      <td>find</td>
-      <td>found</td>
-      <td>found</td>
-    </tr>
-<tr>
-      <td>found</td>
-      <td>founded</td>
-      <td>founded</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 7</h2>
-
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>throw</td>
-      <td>threw</td>
-      <td>thrown</td>
-    </tr>
-<tr>
-      <td>grow</td>
-      <td>grew</td>
-      <td>grown</td>
-    </tr>
-<tr>
-      <td>blow</td>
-      <td>blew</td>
-      <td>blown</td>
-    </tr>
-<tr>
-      <td>draw</td>
-      <td>drew</td>
-      <td>drawn</td>
-    </tr>
-<tr>
-      <td>withdraw</td>
-      <td>withdrew</td>
-      <td>withdrawn</td>
-    </tr>
-<tr>
-      <td>fly</td>
-      <td>flew</td>
-      <td>flown</td>
-    </tr>
-<tr>
-      <td>know</td>
-      <td>knew</td>
-      <td>known</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 8</h2>
-
-<table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>write</td>
-      <td>wrote</td>
-      <td>written</td>
-    </tr>
-<tr>
-      <td>choose</td>
-      <td>chose</td>
-      <td>chosen</td>
-    </tr>
-<tr>
-      <td>freeze</td>
-      <td>froze</td>
-      <td>frozen</td>
-    </tr>
-<tr>
-      <td>speak</td>
-      <td>spoke</td>
-      <td>spoken</td>
-    </tr>
-<tr>
-      <td>awake</td>
-      <td>awoke</td>
-      <td>awoken</td>
-    </tr>
-<tr>
-      <td>break</td>
-      <td>broke</td>
-      <td>broken</td>
-    </tr>
-<tr>
-      <td>steal</td>
-      <td>stole</td>
-      <td>stolen</td>
-    </tr>
-<tr>
-      <td>ride</td>
-      <td>rode</td>
-      <td>ridden</td>
-    </tr>
-<tr>
-      <td>rise</td>
-      <td>rose</td>
-      <td>risen</td>
-    </tr>
-<tr>
-      <td>shake</td>
-      <td>shooke</td>
-      <td>shaken</td>
-    </tr>
-<tr>
-      <td>take</td>
-      <td>took</td>
-      <td>taken</td>
-    </tr>
-<tr>
-      <td>overtake</td>
-      <td>overtook</td>
-      <td>overtaken</td>
-    </tr>
-<tr>
-      <td>mistake</td>
-      <td>mistook</td>
-      <td>mistaken</td>
-    </tr>
-<tr>
-      <td>fall</td>
-      <td>fell</td>
-      <td>fallen</td>
-    </tr>
-<tr>
-      <td>forget</td>
-      <td>forgot</td>
-      <td>forgotten</td>
-    </tr>
-<tr>
-      <td>hide</td>
-      <td>hid</td>
-      <td>hidden</td>
-    </tr>
-<tr>
-      <td>shave</td>
-      <td>shaved</td>
-      <td>shaven (shaved)</td>
-    </tr>
-<tr>
-      <td>bite</td>
-      <td>bit</td>
-      <td>bitten</td>
-    </tr>
-<tr>
-      <td>beat</td>
-      <td>beat</td>
-      <td>beaten</td>
-    </tr>
-    <tr>
-      <td>swear</td>
-      <td>swore</td>
-      <td>sworn</td>
-    </tr>
-    <tr>
-      <td>tear</td>
-      <td>tore</td>
-      <td>torn</td>
-    </tr>
-    <tr>
-      <td>wear</td>
-      <td>wore</td>
-      <td>worn</td>
-    </tr>
-    <tr>
-      <td>weave</td>
-      <td>wove</td>
-      <td>woven</td>
-    </tr>
-    <tr>
-      <td>forbid</td>
-      <td>forbade</td>
-      <td>forbidden</td>
-    </tr>
-    <tr>
-      <td>give</td>
-      <td>gave</td>
-      <td>given</td>
-    </tr>
-    <tr>
-      <td>forgive</td>
-      <td>forgave</td>
-      <td>forgiven</td>
-    </tr>
-    <tr>
-      <td>drive</td>
-      <td>drove</td>
-      <td>driven</td>
-    </tr>
-    <tr>
-      <td>eat</td>
-      <td>ate</td>
-      <td>eaten</td>
-    </tr>
-    <tr>
-      <td>get</td>
-      <td>got</td>
-      <td>got (gotten)</td>
-    </tr>
-    <tr>
-      <td>prove</td>
-      <td>proved</td>
-      <td>proven (proved)</td>
-    </tr>
-    <tr>
-      <td>show</td>
-      <td>showed</td>
-      <td>shown</td>
-    </tr>
-    <tr>
-      <td>wake</td>
-      <td>woke (waked)</td>
-      <td>woken (waked)</td>
-    </tr>
-</tbody>
-</table>
-
-<h2>Group 9</h2>
-    
-    <table border="3">
-<thead>
-    <tr>
-      <th>Simple form</th>
-      <th>Simple past</th>
-      <th>Past participle</th>
-    </tr>
-  </thead>
-  <tbody>
- <tr>
-      <td>dive</td>
-      <td>dived (dove)</td>
-      <td>dived</td>
-    </tr>
-    <tr>
-      <td>do</td>
-      <td>did</td>
-      <td>done</td>
-    </tr>
-    <tr>
-      <td>go</td>
-      <td>went</td>
-      <td>gone</td>
-    </tr>
-    <tr>
-      <td>hear</td>
-      <td>heard</td>
-      <td>heard</td>
-    </tr>
-    <tr>
-      <td>have</td>
-      <td>had</td>
-      <td>had</td>
-    </tr>
-    <tr>
-      <td>(be) am, is, are</td>
-      <td>was, were</td>
-      <td>been</td>
-    </tr>
-    <tr>
-      <td>come</td>
-      <td>came</td>
-      <td>come</td>
-    </tr>
-    <tr>
-      <td>become</td>
-      <td>became</td>
-      <td>become</td>
-    </tr>
-    <tr>
-      <td>overcome</td>
-      <td>overcame</td>
-      <td>overcome</td>
-    </tr>
-    <tr>
-      <td>see</td>
-      <td>saw</td>
-      <td>seen</td>
-    </tr>
-    <tr>
-      <td>saw</td>
-      <td>sawed</td>
-      <td>sawn (sawed)</td>
-    </tr>
-    <tr>
-      <td>lie</td>
-      <td>lied</td>
-      <td>lied</td>
-    </tr>
-    <tr>
-      <td>lay</td>
-      <td>laid</td>
-      <td>laid</td>
-    </tr>
-</tbody>
-</table>
-  </body>
+  <ul>
+    <li>Bread</li>
+    <li>Milk</li>
+    <li>Eggs</li>
+    <li>Cheese</li>
+    <li>Fruit</li>
+    <li>Vegetables</li>
+    <li>Meat</li>
+    <li>Fish</li>
+  </ul>
+</body>
 </html>
