--- a/English/words.html
+++ b/English/words.html
@@ -13,11 +13,11 @@
 
        <ul>
         <li>
-            <a href="words/irregular.html">Irregular verbs</a>
+            <a href="irregular.html">Irregular verbs</a>
         </li>
            
            <li>
-               <a href="words/food.html">Food and drinks</a>
+               <a href="food.html">Food and drinks</a>
            </li>
        </ul>
 
