--- a/English/irregular.html
+++ b/English/irregular.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
+   <link rel="stylesheet" href="friends.css">
   <title>Pract</title>
   <link rel="stylesheet" href="biography.css">
 </head>
